FIX: serverless resourcess error

--- a/cloudfront-origin-access-identity.yml
+++ b/cloudfront-origin-access-identity.yml
@@ -1,4 +1,4 @@
-Resources:
+resources:
   CloudFrontOriginAccessIdentityResource:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
     Properties:
