FIX: test deployment

--- a/serverless.yml
+++ b/serverless.yml
@@ -43,11 +43,11 @@ package:
 
 # you can add CloudFormation resource templates here
 resources:
-  Resources:
-    - ${file(cloudfront-origin-access-identity.yml)}
-    - ${file(s3-bucket-policy.yml)}
-    - ${file(bucketDeploy.yml)}
-    - ${file(cloudfrontDeploy.yml)}
+  - Resources:
+  - ${file(./cloudfront-origin-access-identity.yml)}
+  - ${file(./s3-bucket-policy.yml)}
+  - ${file(./bucketDeploy.yml)}
+  - ${file(./cloudfrontDeploy.yml)}
     
 Outputs:
   - CloudFrontOriginAccessIdentity:
