FIX: test deployment

--- a/serverless.yml
+++ b/serverless.yml
@@ -44,7 +44,7 @@ package:
 # you can add CloudFormation resource templates here
 resources:
   - Resources:
-  - ${file(./cloudfront-origin-access-identity.yml)}
+  - ${file(cloudfront-origin-access-identity.yml)}
   - ${file(./s3-bucket-policy.yml)}
   - ${file(./bucketDeploy.yml)}
   - ${file(./cloudfrontDeploy.yml)}
