FIX: test Deployment

--- a/cloudfront-origin-access-identity.yml
+++ b/cloudfront-origin-access-identity.yml
@@ -1,4 +1,5 @@
- CloudFrontOriginAccessIdentityResource:
+Resources: 
+  CloudFrontOriginAccessIdentityResource:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
     Properties:
       CloudFrontOriginAccessIdentityConfig:
