--- a/InfrBucketDeployment.yml
+++ b/InfrBucketDeployment.yml
@@ -2,5 +2,5 @@ Resources:
     PLSVInfraDeploymentBucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: Infra-${self:custom.project}-${self:provider.stage}
+        BucketName: infra-${self:custom.project}-${self:provider.stage}
         AccessControl: PublicRead
