--- a/edge_lambda.yml
+++ b/edge_lambda.yml
@@ -12,7 +12,7 @@ Resources:
                 const headers = response.headers;
                 headers['content-security-policy'] = [{
                   key: 'Content-Security-Policy',
-                  value: "default-src 'none' https://cdnjs.cloudflare.com https://fonts.googleapis.com; img-src 'self'; script-src 'self' https://cdnjs.cloudflare.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com; object-src 'none'; font-src 'self' https://fonts.googleapis.com"
+                  value: "default-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com; img-src 'self' https://fonts.googleapis.com; script-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com; object-src 'none'; font-src 'self' https://fonts.googleapis.com"
                 }];
                 headers['x-content-type-options'] = [{
                   key: 'X-Content-Type-Options',
