TEST: redifine lambda edge

--- a/lambd_edge_version.yml
+++ b/lambd_edge_version.yml
@@ -3,4 +3,4 @@ Resources:
       Type: AWS::Lambda::Version
       DeletionPolicy: Retain
       Properties:
-        FunctionName: !GetAtt LambdaEdge.Arn
+        FunctionName: !Ref LambdaEdgePlsv
