--- a/edge_lambda.yml
+++ b/edge_lambda.yml
@@ -12,7 +12,7 @@ Resources:
                 const headers = response.headers;
                 headers['content-security-policy'] = [{
                   key: 'Content-Security-Policy',
-                  value: "default-src 'none';script-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline'; style-src 'self'  https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com"
+                  value: "default-src 'none';script-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline'; style-src 'self'  https://cdnjs.cloudflare.com https://fonts.googleapis.com  'unsafe-inline'; font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com"
                 }];
                 headers['x-content-type-options'] = [{
                   key: 'X-Content-Type-Options',
