--- a/edge_lambda.yml
+++ b/edge_lambda.yml
@@ -10,9 +10,10 @@ Resources:
               exports.handler = (event, context, callback) => {
                 const response = event.Records[0].cf.response;
                 const headers = response.headers;
+                const api_endpoint = "https://*.execute-api.us-east-1.amazonaws.com";
                 headers['content-security-policy'] = [{
                   key: 'Content-Security-Policy',
-                  value: "default-src 'none';script-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline'; style-src 'self'  https://cdnjs.cloudflare.com https://fonts.googleapis.com  'unsafe-inline'; font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com"
+                  value: "default-src 'none';script-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com ; style-src 'self'  https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline' ; font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com";connect-src 'self' " + api_endpoint + "; base-uri 'self'
                 }];
                 headers['x-content-type-options'] = [{
                   key: 'X-Content-Type-Options',
@@ -22,6 +23,7 @@ Resources:
                   key: 'X-Frame-Options',
                   value: 'SAMEORIGIN'
                 }];
+                headers['feature-policy'] = [{key: 'Feature-Policy',value: "accelerometer 'none'; ambient-light-sensor 'none'; autoplay 'none'; camera 'none'; geolocation 'none'; gyroscope 'none'; magnetometer 'none'; microphone 'none'; midi 'none'; speaker 'none'; usb 'none'"}];
                 headers['x-permitted-cross-domain-policies'] = [{
                   key: 'X-Permitted-Cross-Domain-Policies',
                   value: 'master-only'
