--- a/serverless.yml
+++ b/serverless.yml
@@ -63,26 +63,26 @@ resources:
   
     
   - Outputs:
-      - PLSVCloudFrontOriginAccessIdentity:
+      PLSVCloudFrontOriginAccessIdentity:
          Description: s3 canonical user
          Value: !GetAtt [CloudFrontOriginAccessIdentityResource, S3CanonicalUserId]
          Export:
            Name: PLSVCloudFrontOriginAccessIdentityResource-${self:provider.stage}
-      - PLSVWebAppS3BucketResourceWebsiteUrl:
+      PLSVWebAppS3BucketResourceWebsiteUrl:
          Description: URL for website hosted on S3
          Value: !GetAtt [PLSVDeploymentBucket, WebsiteURL]
          Export:
            Name: PLSVWebAppS3BucketResourceWebsiteUrl-${self:provider.stage}
-      - PLSVWebAppS3BucketResourceDomainNameSecureURL:
+      PLSVWebAppS3BucketResourceDomainNameSecureURL:
          Description: Name of S3 bucket to hold website content
          Value: !Join ['', ['https://', !GetAtt [PLSVDeploymentBucket, DomainName]]]
          Export:
            Name: PLSVWebAppS3BucketResourceDomainNameSecureURL-${self:provider.stage}
-      - PLSVCloudFrontDistributionResourceDomainName:
+      PLSVCloudFrontDistributionResourceDomainName:
          Description: Name of S3 bucket to hold website content
          Value: !Join ['', ['https://', !GetAtt [PLSVCloudfrontDistributionResource, DomainName]]]
          Export:
            Name: PLSVCloudFrontDistributionResourceDomainName-${self:provider.stage}
-      - PLSVLambdaEdgeVersion:
+      PLSVLambdaEdgeVersion:
          Description: lambda edge version
          Value: !Ref LambdaEdgeVersion
