TEST: cloudfront association

--- a/serverless.yml
+++ b/serverless.yml
@@ -86,3 +86,6 @@ resources:
       PLSVLambdaEdgeVersion:
          Description: lambda edge version
          Value: !Ref LambdaEdgeVersion
+      CloudfrontLambdaAssociation:
+         Description: lambda association
+         Value: PLSVCloudfrontDistributionResource.LambdaFunctionAssociations
