--- a/serverless.yml
+++ b/serverless.yml
@@ -88,4 +88,4 @@ resources:
          Value: !Ref LambdaEdgeVersion
       CloudfrontLambdaAssociation:
          Description: lambda association
-         Value: !GetAtt [PLSVCloudfrontDistributionResource, DefaultCacheBehavior]
+         Value: !GetAtt [PLSVCloudfrontDistributionResource, DistributionConfig.DefaultCacheBehavior.LambdaFunctionAssociations]
