--- a/edge_lambda.yml
+++ b/edge_lambda.yml
@@ -13,7 +13,7 @@ Resources:
                 const api_endpoint = "https://*.execute-api.us-east-1.amazonaws.com";
                 headers['content-security-policy'] = [{
                   key: 'Content-Security-Policy',
-                  value: "default-src 'self' ;script-src 'self' 'sha256-/IZpfk4Is7wRRs7rLHoSTDAUlvS/kBF/rbh+bt+aSw4=' https://cdnjs.cloudflare.com https://fonts.googleapis.com ; style-src 'self'  https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline' ; font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com; connect-src 'self' " + api_endpoint + "; base-uri 'self' ; manifest-src 'self'; img-src 'self' data:"
+                  value: "default-src 'self' ;script-src 'self' 'sha256-/IZpfk4Is7wRRs7rLHoSTDAUlvS/kBF/rbh+bt+aSw4=' https://cdnjs.cloudflare.com https://fonts.googleapis.com ; style-src 'self'  https://cdnjs.cloudflare.com https://fonts.googleapis.com 'unsafe-inline' ; font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com; connect-src 'self' " + api_endpoint + " https://ipv4.icanhazip.com https://api.ipify.org ; base-uri 'self' ; manifest-src 'self'; img-src 'self' data:"
                 }];
                 headers['x-content-type-options'] = [{
                   key: 'X-Content-Type-Options',
